--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,17 @@
   --foreground: #171717;
 }
 
+@theme {
+  --color-lightblack: #191717;
+  --color-darkwhite: #fafafa;
+  --color-orangeneon: #f65c01;
+  --color-redneon: #e22b23;
+  --color-blueneon: #0d1adf;
+  --color-pinkneon: #ff8aea;
+  --color-yellowneon: #cfcc27;
+  --color-greenneon: #329e6c;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -22,7 +33,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Inter, sans-serif;
 }
 
 /* Custom utilities */
@@ -49,7 +60,9 @@ body {
 
 /* Smooth transitions */
 * {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
+    backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
