--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,10 @@
 
 @theme {
   --color-lightblack: #191717;
+  --color-lightwhite: #ffffff;
   --color-darkwhite: #fafafa;
+  --color-lightaccentwhite: #d1d5db;
+  --color-darkaccentwhite: #9ca3af;
   --color-orangeneon: #f65c01;
   --color-redneon: #e22b23;
   --color-blueneon: #0d1adf;
