--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
 
 @theme {
   --color-lightblack: #191717;
+  --color-verylightblack: #444444;
   --color-lightwhite: #ffffff;
   --color-darkwhite: #fafafa;
   --color-lightaccentwhite: #d1d5db;
