--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,8 +23,6 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -37,7 +35,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Inter, sans-serif;
+  font-family: Poppins, sans-serif;
 }
 
 /* Custom utilities */
