Añadidas mejoras trending sneakers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,11 +12,11 @@
   --color-darkwhite: #fafafa;
   --color-lightaccentwhite: #d1d5db;
   --color-darkaccentwhite: #9ca3af;
-  --color-orangeneon: #f65c01;
+  --color-orangeneon: #f95c01;
   --color-redneon: #e22b23;
   --color-blueneon: #0d1adf;
   --color-pinkneon: #ff8aea;
-  --color-yellowneon: #cfcc27;
+  --color-yellowneon: #fcfc27;
   --color-greenneon: #329e6c;
 }
 
